--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Unforgettable Moments In Kabaddi</title>
         <link href="kbd.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div>
